--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
         
         <section class="wrapper">
             <div id="content">
-                <p>I am a <span>Responsive Designer & Developer</span> who thrives on visual storytelling and the best user experience. When I'm not working, pursuing side projects or getting lost in the rabbit hole of blogs and books, I can be found traveling, hiking and searching for new stories.</p>
+                <p>I am a <span>Responsive Designer & Developer</span> who is new to the coding world.. When I'm not  working I enjoy being outdoors fishing or hiking. I have a love for the martial arts and have studied karate for the last 22 years.</p>
+            </div>
+            <div class="new">
+                <p>This is a new section
+                </p>
+                
+
             </div>
         </section>    
 
